add images and update files sass

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,2 +1,5 @@
 @use "./sass/app.scss";
-@use "./sass/header.scss"
+@use "./sass/header.scss";
+@use "./sass/home.scss";
+@use "./sass/footer.scss";
+@use "./sass/about.scss"
