--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 68px;
+    margin: 0 50px;
     img{
         height: 45px;
     }
