--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,20 +1,53 @@
 .footer{
     width: 100%;
     height: 170px;
+    margin-top: 20px;
     background-color: rgba(0, 0, 0, 1);
     display: flex;
     flex-direction: column;
-    justify-content:flex-end;
+    justify-content:center;
     align-items: center;
 
-    img{
-        width: 100px;
+    .logoFooter{
         margin: 10px;
     }
 
-    h3{
+    p {
         color: white;
         text-align: center;
-        margin-bottom: 30px;
+        font-size: 0.75rem;
+        font-weight: 500;
+        margin: 10px;
+        width: 37%;
     }
+
 }
+
+@media screen and (min-width: 768px) {
+    .footer{
+        width: 100%;
+        height: 170px;
+        background-color: rgba(0, 0, 0, 1);
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    
+    
+        .logoFooter{
+            margin: 10px;
+        }
+    
+        p {
+            color: white;
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: 500;
+            margin: 10px;
+            width: 100%;
+        }
+
+        
+        }
+    }
+
