--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,23 +1,76 @@
 .home {
-    margin: 15px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     .bannerHome{
         width: 100%;
-        height: 200px;
+        height: 110px;
         position: relative;
         img{
             width: 100%;
             height: 100%;
             object-fit: cover;
-            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-            border-radius: 25px;
+            border-radius: 10px;
             filter: brightness(60%);
         }
         h1{
             position: absolute;
+            margin: 0;
             color: rgba(255, 255, 255, 1);
-            font-size: 2rem;
-            top: 25%;
-            left: 30%;
+            font-size: 1.5rem;
+            top: 31px;
+            left: 16px;
         }
     }
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+}
+
+@media screen and (min-width: 768px) {
+    .home {
+        width: 1240px;
+        padding: 0 70px;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        .bannerHome{
+            width: 100%;
+            height: 150px;
+            position: relative;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                border-radius: 10px;
+                filter: brightness(60%);
+            }
+            h1{
+                position: absolute;
+                margin: 0;
+                color: rgba(255, 255, 255, 1);
+                font-size: 2.5rem;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+        .gallery {
+            width: 1240px;
+            height: 715px;
+            padding: 25px 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
+            overflow: hidden ;
+            gap: 30px;
+            background-color: rgba(246, 246, 246, 1);
+            border-radius: 25px;
+        }
+}
 }
