--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,7 @@
+@use "./sass/index.scss";
 @use "./sass/app.scss";
 @use "./sass/header.scss";
 @use "./sass/home.scss";
 @use "./sass/footer.scss";
-@use "./sass/about.scss"
+@use "./sass/about.scss";
+@use "./sass/thumb.scss"
