--- a/src/main.scss
+++ b/src/main.scss
@@ -4,4 +4,5 @@
 @use "./sass/home.scss";
 @use "./sass/footer.scss";
 @use "./sass/about.scss";
-@use "./sass/thumb.scss"
+@use "./sass/thumb.scss";
+@use "./sass/errorPage.scss"
