--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -25,8 +25,9 @@
 
 @media screen and (min-width: 768px) {
     .footer{
-        width: 100%;
+        max-width: 1440px;
         height: 170px;
+        margin-top: 30px;
         background-color: rgba(0, 0, 0, 1);
         display: flex;
         flex-direction: column;
