--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,17 +1,24 @@
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Montserrat";
+    
 }
 
 body {
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
 @media screen and (min-width: 768px) {
     body{
         margin: 0 auto;
-        max-width: 1440px;
         padding: 0;
         box-sizing: border-box;
     }
