add file collapse.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,4 +5,5 @@
 @use "./sass/footer.scss";
 @use "./sass/about.scss";
 @use "./sass/thumb.scss";
-@use "./sass/errorPage.scss"
+@use "./sass/errorPage.scss";
+@use "./sass/collapse.scss"
