--- a/src/sass/collapse.scss
+++ b/src/sass/collapse.scss
@@ -4,7 +4,6 @@
     gap: 25px;
 
     .collapse_Section {
-        min-height: 52px;
         font-size: 0.813rem;
         font-weight: 700;
         width: 335px;
@@ -20,7 +19,7 @@
     }
 
     .collapse_Header {
-        height: 30px;
+        min-height: 30px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -34,9 +33,10 @@
         }
 
         img {
-            width: 20px;
-            height: 20px;
+            width: 25px;
+            height: 25px;
             padding-right: 10px;
+            filter: brightness(0) invert(1);
         }
         
     }
@@ -88,4 +88,12 @@
         
     }
 }
+}
+
+.rotate {
+    transition: transform 0.3s ease;
+}
+
+.arrowUp.open.rotate {
+    transform: translateX(-50%) rotate(180deg);
 }
