add import carrousel logementSheet tags ratings

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,4 +6,8 @@
 @use "./sass/about.scss";
 @use "./sass/thumb.scss";
 @use "./sass/errorPage.scss";
-@use "./sass/collapse.scss"
+@use "./sass/collapse.scss";
+@use "./sass/carrousel.scss";
+@use "./sass/logementSheet.scss";
+@use "./sass/tags.scss";
+@use "./sass/rating.scss";
