--- a/src/sass/thumb.scss
+++ b/src/sass/thumb.scss
@@ -15,26 +15,23 @@
         
     }
     .titleImg{
-        width: 300px;
-        height: 52px;
+        width: 100%;
+        height: 54px;
         margin: 0;
         padding-left: 10px;
         font-size: 1.125rem;
         color: rgba(255, 255, 255, 1);
         position: absolute;
         top: 190px;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+        border-radius: 10px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .thumb{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         width: 315px;
         height: 315px;
-        position: relative;
-        background-color: rgba(255, 96, 96, 1);
         border-radius: 10px;
         
         img{
@@ -44,13 +41,7 @@
             border-radius: 10px;
             
         }
-        .titleImg{
-            width: 300px;
-            height: 52px;
-            padding-left: 10px;
-            font-size: 1.125rem;
-            color: rgba(255, 255, 255, 1);
-            position: absolute;
+        .titleImg{            
             top: 260px;
         }
     }
