--- a/src/sass/tags.scss
+++ b/src/sass/tags.scss
@@ -13,9 +13,9 @@
         color: rgba(255, 255, 255, 1);
         background-color: rgba(255, 96, 96, 1);
         border-radius: 5px;
-        width: 84px;
+        min-width: 84px;
+        min-height: 20px;
         padding: 0 5px;
-        height: 20px;
     }
 }
 
@@ -27,8 +27,9 @@
             border-radius: 10px;
             font-size: 0.875rem;
             margin: 10px 0;
-            width: 115px;
-            height: 25px;
+            min-width: 115px;
+            min-height: 25px;
+            padding: 5px 20px;
         }
 }
 }
