--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -19,8 +19,10 @@
     }
 
     .collapseContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
         padding: 0;
-        border-radius: 5px;
     }
 }
 
@@ -30,7 +32,7 @@
         padding: 0 70px;
         display: flex;
         flex-direction: column;
-        gap: 25px;
+        gap: 35px;
         
         .bannerAbout{
             width: 100%;
@@ -47,7 +49,6 @@
     
         .collapseContainer{
             width: 1023px;
-            border-radius: 5px;
             color: rgb(255, 255, 255);
     
         }
