--- a/src/sass/logementSheet.scss
+++ b/src/sass/logementSheet.scss
@@ -57,6 +57,12 @@
 
     }
 
+    .containerGlobalCollapse {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -123,6 +129,13 @@
                 background-color: rgba(196, 196, 196, 1);
             }
     
+        }
+
+        .containerGlobalCollapse {
+            width: 1023px;
+            display: flex;
+            flex-direction: row;
+            gap: 60px;
         }
     
     }
