--- a/src/sass/rating.scss
+++ b/src/sass/rating.scss
@@ -1,15 +1,19 @@
 .stars{
-    width: 100px;
+    width: 200px;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 2px;
+    
+    
 }
 
 @media screen and (min-width: 768px) {
     .stars{
         gap: 10px;
+        display: flex;
         justify-content: flex-end;
-        img{
+        .greyStar .redStar {
             width: 20px;
             height: 20px;
         }
