--- a/src/sass/tags.scss
+++ b/src/sass/tags.scss
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
 
     .tag {
@@ -13,7 +14,7 @@
         color: rgba(255, 255, 255, 1);
         background-color: rgba(255, 96, 96, 1);
         border-radius: 5px;
-        min-width: 84px;
+        min-width: 75px;
         min-height: 20px;
         padding: 0 5px;
     }
