--- a/src/sass/errorPage.scss
+++ b/src/sass/errorPage.scss
@@ -3,16 +3,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 60px;
+    margin: 60px 0;
+    width: 100%;
 
     h1 {
-        width: 200px;
-        height: 100px;
         font-size: 6rem;
         font-weight: 700;
         color: rgba(255, 96, 96, 1);
     }
 
     p {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 260px;
         height: 55px;
         font-size: 1.125rem;
@@ -21,11 +25,43 @@
     }
 
     .errorLink {
-        display: none;
-        width: 220px;
+        width: 100%;
         height: 20px;
         font-size: 0.875rem;
         font-weight: 500;
-        color: rgba(0, 0, 0, 1);
+        text-align: center;
+        a{
+            color: rgba(0, 0, 0, 1);
+        }
     }
+}
+
+@media screen and (min-width: 768px) {
+    .errorPage {
+        gap: 100px;
+    
+        h1 {
+            font-size: 18rem;
+        }
+    
+        p {
+            width: 100%;
+            height: 100%;
+            font-size: 2.25rem;
+            .returnLine{
+                display: none;
+            }
+        }
+    
+        .errorLink {
+            width: 100%;
+            height: 20px;
+            font-size: 1.125rem;
+            font-weight: 500;
+            text-align: center;
+            a{
+                color: rgba(0, 0, 0, 1);
+            }
+        }
+    }    
 }
