--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -2,10 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 68px;
     padding: 10px;
-    margin-bottom: 25px;
     height: 100%;
+    width: 100%;
     img{
         height: 45px;
     }
