--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,13 +13,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    #root{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media screen and (min-width: 768px) {
-    body{
-        margin: 0 auto;
-        padding: 0;
-        box-sizing: border-box;
-    }
+    
+    
 }
