--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 10px 0;
     height: 100%;
-    width: 100%;
+    width: 335px;
     img{
         height: 45px;
     }
@@ -30,8 +30,9 @@
 
 @media screen and (min-width: 768px) {
     .header{
-        padding: 25px 70px;
+        padding: 25px 110px;
         margin: 0;
+        width: 100%;
         max-width: 1240px;
         img{
             height: 68px;
