--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -3,15 +3,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 10px;
-    gap: 30px;
+    padding: 0 20px;
+    gap: 50px;
     
     .bannerAbout{
         width: 100%;
+        height: 130px;
     
         img{
             width: 100%;
-            height: 110px;
+            height: 100%;
             object-fit: cover;
             border-radius: 10px;
             filter: brightness(60%);
@@ -21,13 +22,17 @@
     .collapseContainer{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         gap: 25px;
         padding: 0;
+        width: 70%;
     }
 }
 
 @media screen and (min-width: 768px) {
     .about {
+        width: 100%;
         max-width: 1240px;
         padding: 0 70px;
         display: flex;
@@ -48,7 +53,8 @@
         }
     
         .collapseContainer{
-            width: 1023px;
+            width: 100%;
+            max-width: 1023px;
             color: rgb(255, 255, 255);
     
         }
