--- a/src/sass/collapse.scss
+++ b/src/sass/collapse.scss
@@ -3,6 +3,8 @@
 .collapse_Container_About {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
     gap: 15px;
 
     .collapse_Section {
@@ -47,7 +49,7 @@
 
 @media screen and (min-width: 768px) {
 .collapse_Container_About {
-    width: 1023px;
+    width: 85%;
     display: flex;
     flex-direction: column;
     gap: 25px;
