--- a/src/sass/errorPage.scss
+++ b/src/sass/errorPage.scss
@@ -45,6 +45,8 @@
         }
     
         p {
+            padding: 25px 70px;
+            text-align: center;
             width: 100%;
             height: 100%;
             font-size: 2.25rem;
