--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,10 +13,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     #root{
         width: 100%;
+        height: 100%;
+        min-height: 755px;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         align-items: center;
     }
 }
