--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,7 +15,7 @@ body {
     align-items: center;
     height: 100%;
     #root{
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         min-height: 755px;
         display: flex;
