--- a/src/sass/logementSheet.scss
+++ b/src/sass/logementSheet.scss
@@ -25,7 +25,7 @@
     }
 
     .container_Ratings_Host {
-        width: 100%;
+        width: 335px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
