--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,9 +15,8 @@ body {
     align-items: center;
     height: 100%;
     #root{
-        min-width: 100%;
+        width: 100%;
         height: 100%;
-        min-height: 755px;
         display: flex;
         flex-direction: column;
         align-items: center;
