--- a/src/sass/collapse.scss
+++ b/src/sass/collapse.scss
@@ -10,7 +10,7 @@
     .collapse_Section {
         font-size: 0.813rem;
         font-weight: 700;
-        width: 335px;      
+        width: 100%;      
         .collapse_Content {
             width: 100%;
             font-weight: 500;
