--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,20 +10,23 @@ body {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
+    
     #root{
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
 }
 
 @media screen and (min-width: 768px) {
-    
+    body {
+        
+        #root{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
     
 }
